# AI-Dev-Batch-1-HW

./: README.md
w1/: README.md
w1/Individual/coding/: AccuGPTsheet.js  AccuGPTsheet實作.md  Practice_AccuGPTsheet.md  README.md  main.js  readme.md
w1/Individual/final_project_des/: README.MD
w1/Individual/reading_and_summary/: AccuGPTsheet練習.md  FinalProjectIdea.md  Google Sheet 流程.md  GraduationTopic.md  Graduation_Project_Planning.md  LangChain五大優點.md  LangchainLearning.md  Langchain_Five_Advantages.md  Langchain的五大優點.md  README.md  Week1 Homework .md  Week1 Homework.md  langchain五個優點.md  其他心得.md  畢業專案發想.md  畢業專案規劃.md  畢業專題.md
w1/Individual/reading_and_summary /: Graduation_Project_Planning.md  Langchain_Five_Advantages.md
w1/individual/: README.md
w1/individual/coding/: AccuGPTsheet_Implementation.md  README.md
w1/individual/final_project_des/: README.md
w1/individual/reading_and_summary/: Final_project_Ideas.md  README.md
w2/Individual/coding/: PromptTest.py  PromptsUsing.md
w2/Individual/reading_and_summary/: webui.md  最佳化 prompt.md
w2/reading_and_summary/: ChatGPI_Prompt優化.md  SD Extension - API payload display流程測試.md  response_1713638833382.json  stable_diffusion_webui_payload.md  畢業專案題目Prompt.md
w3/coding/: bot.py
w3/individual/coding/rag-example-main/: bot.py  pyproject.toml
w3/individual/coding/rag-example-main/faiss_index/: index.faiss  index.pkl
w3/individual/coding/rag-example-main/importer/: config.py  load_and_process.py  save_notion_html.py
w3/individual/coding/rag-example-main/source_docs/: ai.md  notion_page_content.html
(+24 files in other folders)
